syntax = "proto3";

package im_server;

import "google/api/annotations.proto";
import "openapi/v3/annotations.proto";
// NOTE: relative path that specified proc cmd
import "common.proto";

option go_package = "im-server/api/v1;v1";


// The greeting service definition.
service GreeterSvc {
  // Sends a greeting
  rpc ListGreeter (ListGreeterReq) returns (ListGreeterRsp) {
    option (google.api.http) = {
      post: "/v1/greeter/list"
      body:"*"
    };
    option (openapi.v3.operation) = {
      summary: "获取Greeter列表"
    };
  }
}

// The request message containing the user's name.
message ListGreeterReq {

}

// The response message containing the greetings
message ListGreeterRsp {
  BaseResp ret = 1;
  message Body {
    repeated Greeter greeters = 1; // Greeters
  }
  Body body = 2;
}

message Greeter {
  string name = 1; // Greeter Name
  uint32 age = 2;
}
